appservices/domain/native-canary/native-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: native-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: native-canary
