appservices/domain/native-canary/native-canary-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: native-canary
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: native-canary.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: native-canary
          servicePort: http
        path: /
  tls:
  - hosts:
    - native-canary.poc.awx.onl
    secretName: tls-cert-native-canary
